# menstruation-telegram

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  bot.py  client.py  config.py  example.json  flake.nix  frontend.py  mensa.graphql  mensa.json  menstruate  menstruate.graphql  pics.yaml  plan.sh  pyproject.toml  requirements.nix  requirements.txt  setup.py  shell.nix  test.sh
client/: menstruate
client-cli/: menstruate  requirements.txt
client-telegram/: Dockerfile  README.md  bot.py  client.py  menstruation-bot  requirements.txt  test.sh
menstruation/: bot.py  client.py  config.py  handlers.py  jobs.py  query.py
server/: app.yaml  backend.py  requirements.txt
